<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_asr_group"
        android:key="pref_key_asr">
        <CheckBoxPreference
            android:title="@string/pref_asr_active_title"
            android:key="pref_key_asr_active"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="@string/pref_open_domain_title"
            android:key="pref_key_open_domain"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_tts_group"
        android:key="pref_key_tts">
        <CheckBoxPreference
            android:title="@string/pref_tts_active_title"
            android:key="pref_key_tts_active"
            android:defaultValue="false"/>
        <com.example.kevin.commands.SpeechRatePreference
            android:title="@string/pref_speech_rate_title"
            android:key="pref_key_speech_rate"
            android:defaultValue="10" />
        <com.example.kevin.commands.PitchPreference
            android:title="@string/pref_pitch_title"
            android:key="pref_key_pitch"
            android:defaultValue="10" />
        <ListPreference
            android:title="@string/pref_language_title"
            android:key="pref_key_language"
            android:defaultValue="US"/>
        <ListPreference
            android:title="@string/pref_voice_title"
            android:key="pref_key_voice"
            android:defaultValue="en_US-locale"/>
        <ListPreference
            android:title="@string/pref_engine_title"
            android:key="pref_key_engine"
            android:defaultValue="com.google.android.tts"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_sensors_group"
        android:key="pref_key_sensors">
        <CheckBoxPreference
            android:title="@string/pref_sensors_active_title"
            android:key="pref_key_sensors_active"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_touch_group"
        android:key="pref_key_touch">
        >
        <CheckBoxPreference
            android:title="@string/pref_touch_active_title"
            android:key="pref_key_touch_active"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_haptic_group"
        android:key="pref_key_haptio">
        >
        <CheckBoxPreference
            android:title="@string/pref_haptic_active_title"
            android:key="pref_key_haptic_active"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>